# lms-service/internal/dto/user_dto.go
@@ -6,3 +6,9 @@ type UserRolesResponse struct {
 	Email  string   `json:"email"`
 	Roles  []string `json:"roles"`
 }
+
+type UserSearchResponse struct {
+	ID       int64  `json:"id"`
+	Email    string `json:"email"`
+	FullName string `json:"full_name"`
+}
